<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

    <TextView
        android:id="@+id/dlgTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="5dp"
        android:text="@string/confirm_title"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/titleSeparator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/dlgTitle"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"/>


    <TextView
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleSeparator"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/dlgCancelBtn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/messageText"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/no_btn_text"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/dlgOkBtn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/messageText"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@id/dlgCancelBtn"
        android:background="@drawable/dialog_item_bkg"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/yes_btn_text"
        android:textAllCaps="true"
        android:textColor="@color/colorAction"
        android:textSize="12sp"
        android:textStyle="bold"
        />

</RelativeLayout>